--- a/app/src/main/res/layout/activity_see_more.xml
+++ b/app/src/main/res/layout/activity_see_more.xml
@@ -40,5 +40,14 @@
         app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/item_row_movies" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
+        android:visibility="gone"/>
 
 </android.support.constraint.ConstraintLayout>
