--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -141,5 +141,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/top_movies_title"
             tools:listitem="@layout/item_row_movies" />
+
+        <ProgressBar
+            android:id="@+id/progressBarTopMovies"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/top_movies_title"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
