--- a/app/src/main/res/layout/fragment_tv_shows.xml
+++ b/app/src/main/res/layout/fragment_tv_shows.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:fillViewport="true"
-    tools:context=".MoviesFragment">
+    tools:context=".TvShowsFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -57,6 +57,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rvAiringTV"
             app:layout_constraintVertical_bias="0.0" />
+
+        <ProgressBar
+            android:id="@+id/progressBarPopularTvShows"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvPopularTV"
+            app:layout_constraintBottom_toBottomOf="@id/tvTopTV"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tvSeeMorePopular"
@@ -132,5 +142,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTopTV"
             tools:listitem="@layout/item_row_movies" />
+
+        <ProgressBar
+            android:id="@+id/progressBarTopTvShows"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTopTV"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
