--- a/app/src/main/res/layout/item_row_upcoming_movies.xml
+++ b/app/src/main/res/layout/item_row_upcoming_movies.xml
@@ -11,9 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="190dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:contentDescription="@string/image_banner_upcoming_movies"
         tools:src="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
