--- a/app/src/main/res/layout/activity_detail_search.xml
+++ b/app/src/main/res/layout/activity_detail_search.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".DetailActivitySearch">
+    tools:context=".view.DetailActivitySearch">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
