--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -72,7 +72,8 @@
             app:layout_constraintEnd_toEndOf="@id/popular_movie_title"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintTop_toTopOf="@id/popular_movie_title"
-            app:layout_constraintBottom_toBottomOf="@id/popular_movie_title"/>
+            app:layout_constraintBottom_toBottomOf="@id/popular_movie_title"
+            android:focusable="true" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_populer_movie"
@@ -157,7 +158,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.5"/>
+            app:layout_constraintVertical_bias="0.5"
+            android:contentDescription="@string/connection_error" />
 
         <TextView
             android:id="@+id/tvConnectionError"
