--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,5 +11,9 @@
         android:icon="@drawable/ic_personal_video_black_24dp"
         android:title="@string/title_tv_shows" />
 
+    <item
+        android:id="@+id/navigation_favorite"
+        android:icon="@drawable/ic_favorite_black_24dp"
+        android:title="@string/favorite"/>
 
 </menu>
