--- a/app/src/main/res/layout-land/activity_detail.xml
+++ b/app/src/main/res/layout-land/activity_detail.xml
@@ -43,6 +43,31 @@
             android:contentDescription="@string/banner" />
 
         <ImageView
+            android:id="@+id/ivUnfavorite"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="@id/banner"
+            app:layout_constraintStart_toStartOf="@id/banner"
+            app:layout_constraintEnd_toEndOf="@id/banner"
+            app:layout_constraintBottom_toBottomOf="@id/banner"
+            app:layout_constraintHorizontal_bias="0.95"
+            app:layout_constraintVertical_bias="0.1"
+            android:src="@drawable/ic_favorite_border_white_24dp"/>
+
+        <ImageView
+            android:id="@+id/ivFavorite"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="@id/banner"
+            app:layout_constraintStart_toStartOf="@id/banner"
+            app:layout_constraintEnd_toEndOf="@id/banner"
+            app:layout_constraintBottom_toBottomOf="@id/banner"
+            app:layout_constraintHorizontal_bias="0.95"
+            app:layout_constraintVertical_bias="0.1"
+            android:src="@drawable/ic_favorite_red_24dp"
+            android:visibility="gone"/>
+
+        <ImageView
             android:layout_width="414dp"
             android:layout_height="240dp"
             android:src="@drawable/cover_banner"
@@ -63,7 +88,7 @@
             app:layout_constraintTop_toTopOf="@id/banner"
             app:layout_constraintBottom_toBottomOf="@id/cover"
             app:layout_constraintVertical_bias="6"
-            android:contentDescription="@string/poster_film_tv_shows" />
+            android:contentDescription="@string/image_cover_movies" />
 
         <ImageView
             android:id="@+id/cover"
@@ -77,7 +102,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/banner"
             app:layout_constraintVertical_bias="0.7"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            android:contentDescription="@string/poster_film_tv_shows" />
 
         <TextView
             android:id="@+id/tvScore"
@@ -361,5 +387,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="1999"
             />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tbBack"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.5" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
