--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -43,6 +43,31 @@
             android:contentDescription="@string/banner"/>
 
         <ImageView
+            android:id="@+id/ivUnfavorite"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="@id/banner"
+            app:layout_constraintStart_toStartOf="@id/banner"
+            app:layout_constraintEnd_toEndOf="@id/banner"
+            app:layout_constraintBottom_toBottomOf="@id/banner"
+            app:layout_constraintHorizontal_bias="0.95"
+            app:layout_constraintVertical_bias="0.1"
+            android:src="@drawable/ic_favorite_border_white_24dp"/>
+
+        <ImageView
+            android:id="@+id/ivFavorite"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="@id/banner"
+            app:layout_constraintStart_toStartOf="@id/banner"
+            app:layout_constraintEnd_toEndOf="@id/banner"
+            app:layout_constraintBottom_toBottomOf="@id/banner"
+            app:layout_constraintHorizontal_bias="0.95"
+            app:layout_constraintVertical_bias="0.1"
+            android:src="@drawable/ic_favorite_red_24dp"
+            android:visibility="gone"/>
+
+        <ImageView
             android:layout_width="414dp"
             android:layout_height="240dp"
             android:src="@drawable/cover_banner"
