--- a/app/src/main/res/layout-land/activity_detail.xml
+++ b/app/src/main/res/layout-land/activity_detail.xml
@@ -48,10 +48,10 @@
             android:layout_height="40dp"
             app:layout_constraintTop_toTopOf="@id/banner"
             app:layout_constraintStart_toStartOf="@id/banner"
-            app:layout_constraintEnd_toEndOf="@id/banner"
+            app:layout_constraintEnd_toEndOf="@id/tvScore"
             app:layout_constraintBottom_toBottomOf="@id/banner"
-            app:layout_constraintHorizontal_bias="0.95"
-            app:layout_constraintVertical_bias="0.1"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintVertical_bias="0.075"
             android:src="@drawable/ic_favorite_border_white_24dp"/>
 
         <ImageView
@@ -60,11 +60,11 @@
             android:layout_height="40dp"
             app:layout_constraintTop_toTopOf="@id/banner"
             app:layout_constraintStart_toStartOf="@id/banner"
-            app:layout_constraintEnd_toEndOf="@id/banner"
+            app:layout_constraintEnd_toEndOf="@id/tvScore"
             app:layout_constraintBottom_toBottomOf="@id/banner"
-            app:layout_constraintHorizontal_bias="0.95"
-            app:layout_constraintVertical_bias="0.1"
-            android:src="@drawable/ic_favorite_red_24dp"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintVertical_bias="0.075"
+            android:src="@drawable/ic_favorite_gray_24dp"
             android:visibility="gone"/>
 
         <ImageView
