--- a/app/src/main/res/layout-land/activity_detail_tv.xml
+++ b/app/src/main/res/layout-land/activity_detail_tv.xml
@@ -43,6 +43,33 @@
             android:contentDescription="@string/banner" />
 
         <ImageView
+            android:id="@+id/ivUnfavorite"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="@id/banner"
+            app:layout_constraintStart_toStartOf="@id/banner"
+            app:layout_constraintEnd_toEndOf="@id/tvScore"
+            app:layout_constraintBottom_toBottomOf="@id/banner"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintVertical_bias="0.075"
+            android:src="@drawable/ic_favorite_border_white_24dp"
+            android:contentDescription="@string/favorite" />
+
+        <ImageView
+            android:id="@+id/ivFavorite"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="@id/banner"
+            app:layout_constraintStart_toStartOf="@id/banner"
+            app:layout_constraintEnd_toEndOf="@id/tvScore"
+            app:layout_constraintBottom_toBottomOf="@id/banner"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintVertical_bias="0.075"
+            android:src="@drawable/ic_favorite_gray_24dp"
+            android:visibility="gone"
+            android:contentDescription="@string/unfavorite" />
+
+        <ImageView
             android:layout_width="414dp"
             android:layout_height="240dp"
             android:src="@drawable/cover_banner"
@@ -362,5 +389,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="1999"
             />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tbBack"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.5" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
