--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -52,7 +52,8 @@
             app:layout_constraintBottom_toBottomOf="@id/banner"
             app:layout_constraintHorizontal_bias="0.95"
             app:layout_constraintVertical_bias="0.1"
-            android:src="@drawable/ic_favorite_border_white_24dp"/>
+            android:src="@drawable/ic_favorite_border_white_24dp"
+            android:contentDescription="@string/favorite" />
 
         <ImageView
             android:id="@+id/ivFavorite"
@@ -65,7 +66,8 @@
             app:layout_constraintHorizontal_bias="0.95"
             app:layout_constraintVertical_bias="0.1"
             android:src="@drawable/ic_favorite_gray_24dp"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:contentDescription="@string/unfavorite" />
 
         <ImageView
             android:layout_width="414dp"
