--- a/app/src/main/res/layout/activity_detail_search.xml
+++ b/app/src/main/res/layout/activity_detail_search.xml
@@ -30,16 +30,6 @@
             android:lines="1"
             android:ellipsize="end"
             />
-            <TextView
-                android:id="@+id/toolbar_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/mastsee"
-                android:fontFamily="sans-serif-medium"
-                android:textSize="18sp"
-                android:lines="1"
-                android:ellipsize="end"
-                />
         </android.support.v7.widget.Toolbar>
 
         <ImageView
@@ -51,6 +41,33 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tbBack"
             android:contentDescription="@string/banner" />
+
+        <ImageView
+            android:id="@+id/ivUnfavorite"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="@id/banner"
+            app:layout_constraintStart_toStartOf="@id/banner"
+            app:layout_constraintEnd_toEndOf="@id/banner"
+            app:layout_constraintBottom_toBottomOf="@id/banner"
+            app:layout_constraintHorizontal_bias="0.95"
+            app:layout_constraintVertical_bias="0.1"
+            android:src="@drawable/ic_favorite_border_white_24dp"
+            android:contentDescription="@string/favorite" />
+
+        <ImageView
+            android:id="@+id/ivFavorite"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="@id/banner"
+            app:layout_constraintStart_toStartOf="@id/banner"
+            app:layout_constraintEnd_toEndOf="@id/banner"
+            app:layout_constraintBottom_toBottomOf="@id/banner"
+            app:layout_constraintHorizontal_bias="0.95"
+            app:layout_constraintVertical_bias="0.1"
+            android:src="@drawable/ic_favorite_gray_24dp"
+            android:visibility="gone"
+            android:contentDescription="@string/unfavorite" />
 
         <ImageView
             android:layout_width="414dp"
@@ -418,5 +435,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="1999"
             />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tbBack"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.2" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
