--- a/app/src/main/res/layout/fragment_tv_shows.xml
+++ b/app/src/main/res/layout/fragment_tv_shows.xml
@@ -45,6 +45,7 @@
             android:id="@+id/tvPopularTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginStart="32dp"
             android:layout_marginBottom="586dp"
             android:fontFamily="sans-serif"
