--- a/app/src/main/res/layout/activity_setting_reminder.xml
+++ b/app/src/main/res/layout/activity_setting_reminder.xml
@@ -1,10 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/setting_reminder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SettingReminderActivity">
+    tools:context=".view.SettingReminderActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tbBack"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin">
+
+        <TextView
+            android:id="@+id/toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/setting_reminder"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="18sp"
+            android:lines="1"
+            android:ellipsize="end"
+            />
+    </android.support.v7.widget.Toolbar>
+
+    <FrameLayout
+        android:id="@+id/setting_reminder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
