--- a/app/src/main/res/menu/menu_bar.xml
+++ b/app/src/main/res/menu/menu_bar.xml
@@ -15,5 +15,9 @@
         <item android:id="@+id/setting_reminder"
             android:title="@string/setting_reminder"
             app:showAsAction="never"/>
+
+        <item android:id="@+id/about"
+            android:title="@string/about"
+            app:showAsAction="never"/>
     </group>
 </menu>
